--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
+
 <body>
     <center>
 
@@ -13,12 +15,14 @@
             Github Profile Fetcher
         </h1>
         <div style="background-color: gainsboro;width: 400px;border-radius: 10px;">
-            <input style="margin: 20px;height: 30px;" placeholder="Search Profile" id="inp" type="text">
-            <button style="height: 36px;" onclick="btn()">Search</button>
+            <input  style="border: 2px solid black; margin: 20px;height: 30px;border-radius: 10px;"
+                placeholder="Search Profile" id="inp" type="text">
+            <button style="height: 32px;border-radius: 10px;border: 2px solid black" onclick="btn()">Search</button>
         </div>
-<div id="show">
 
-</div>
+        <div class="row" style="margin: 20px;" id="show">
+
+        </div>
 
     </center>
 
@@ -27,4 +31,5 @@
 
     <script src="app.js"></script>
 </body>
-</html> -->
+
+</html>
